--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,8 @@ Package: railwayJP
 Title: Plot Japanese Railway Routes Using Government Open Data
 Version: 0.1.0
 Authors@R:
-    person("Soichiro", "", email = "soichiro@example.com", role = c("aut", "cre"))
+    person("Soichiro", "Yamauchi", email = "soichiro@alumni.princeton.edu", 
+        role = c("aut", "cre"))
 Description: Plot railway routes across Japan using the National Land Numerical
     Information (Kokudo Suuchi Jouhou) railway dataset from the Ministry of Land,
     Infrastructure, Transport and Tourism (MLIT). Features include graph-based
@@ -29,5 +30,5 @@ Suggests:
     knitr,
     rmarkdown
 Config/testthat/edition: 3
-URL: https://github.com/soichiro/railwayJP
-BugReports: https://github.com/soichiro/railwayJP/issues
+URL: https://github.com/soichiroy/railwayJP
+BugReports: https://github.com/soichiroy/railwayJP/issues
