--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(get_data_dir)
 export(get_data_info)
 export(get_operator_color)
 export(get_route)
+export(get_route_sections)
 export(has_railway_data)
 export(list_lines)
 export(list_operator_colors)
