Support marketing names for lines (e.g,. 瀬戸大橋線)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,16 @@
 
 export(clear_railway_cache)
 export(download_railway_data)
+export(expand_line_filter)
 export(get_cache_dir)
 export(get_data_dir)
 export(get_data_info)
+export(get_line_aliases)
 export(get_operator_color)
 export(get_route)
 export(get_route_sections)
 export(has_railway_data)
+export(list_line_aliases)
 export(list_lines)
 export(list_operator_colors)
 export(list_operators)
